# TradingBot

./: .gitignore
collection/: Cargo.toml
collection/src/: client.rs  collector.rs  lib.rs  main.rs  sector_lookup.rs  sentiment.rs  structures.rs  throttle.rs  types.rs  utils.rs
collection/src/collectors/: ml_data.rs  ml_data_now.rs  ml_data_train.rs  mod.rs
collection/src/fetchers/: market_data.rs  mod.rs  news.rs  prediction_markets.rs  reddit.rs  sec.rs
collection/src/sources/: market_data.rs  mod.rs  news.rs  prediction_markets.rs  sec.rs
execution/: handle_data.py  main.py  model.py  train_model.py
execution/data/live/: AAPL_live_dataset.json
execution/data/train/: AAPL_train_dataset.json
execution/models/AAPL/: aggregation.keras  earnings.keras  generalist.keras  news.keras  normalization.json  regime.keras  technical.keras
