[package]
name = "collection"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "form"] }
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2"
chrono = "0.4.44"
